[package]
name = "moka-cht"
version = "0.5.0"
authors = ["Gregory Meyer <me@gregjm.dev>", "Tatsuya Kawano <tatsuya@hibaridb.org>"]
edition = "2018"

description = "Lock-free resizeable concurrent hash table"
license = "MIT"
documentation = "https://docs.rs/moka-cht/"
repository = "https://github.com/moka-rs/moka-cht"
keywords = ["hashmap", "concurrent"]
categories = ["data-structures"]
readme = "README.md"
exclude = [".github", ".vscode"]

[features]
default = ["num-cpus"]
num-cpus = ["num_cpus"]

[dependencies]
crossbeam-epoch = "^0.8.2"
num_cpus = { version = "^1.12.0", optional = true }

[dev-dependencies]
criterion = "^0.3.1"
hashbrown = "^0.7.0"
lock_api = "^0.3.3"
num_cpus = "^1.12.0"
parking_lot = "^0.10.0"

[[bench]]
name = "cht"
harness = false

[[bench]]
name = "mutex"
harness = false
